--- a/webpages/Features_1080_statstfdv.html
+++ b/webpages/Features_1080_statstfdv.html
@@ -1,3 +1,7 @@
+<!doctype html>
+<html>
+
+<body>
 <iframe id='facets-iframe' width="100%" height="500px"></iframe>
         <script>
         facets_iframe = document.getElementById('facets-iframe');
@@ -8,3 +12,9 @@
            facets_iframe.setAttribute('height', facets_iframe.contentWindow.document.body.offsetHeight + 'px')
          }, 1500)
          </script>
+
+</iframe>
+        
+</body>
+
+</html>
